astro-vue-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: astro-vue-demo-frontend
  name: astro-vue-demo-deployment
  namespace: dev-antonio
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: astro-vue-demo-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: astro-vue-demo-frontend
    spec:
      affinity: {}
      containers:
      - image: astro-vue-demo:1.0.0
        imagePullPolicy: Never
        name: container-0
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
