springboot-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo
  namespace: dev-antonio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: springboot-demo-service
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-demo-api
  sessionAffinity: None
  type: ClusterIP
